--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "GPL-3.0-or-later",
     "type": "neos-package",
     "require": {
-        "neos/neos": "^5.2 || ^7.0 || dev-master",
+        "neos/neos": "^5.2 || ^7.0 ||  ^8.0 || dev-master",
         "flowpack/entity-usage": "^1.0 || dev-main || dev-master"
     },
     "autoload": {
